"Начальный коммит" delete: "Удалить проверку на id в методах удаления задач" feat: "Добавить функционал просмотра истории задач" fix:"Переделать методы доставание задач через id параметр" refactor: "Переработать классы в интерефейсы" style: "Добавить javadoc на интерфейсы и методы, убрать лишнее" refactor: "Изменить список history на LinkedList"